estructura de una app con polymer y el componente de mapa

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  </head>
-  <body>
-<h1>hola</h1>
-  </body>
+<head>
+  <title>Ecobici</title>
+  <link rel="import" href="my-app.html">
+  
+</head>
+<body>
+    <my-app></my-app>
+
+</body>
+
 </html>
