--- a/public/index.html
+++ b/public/index.html
@@ -81,9 +81,23 @@
            </div>
          </div>
          <div class="parallax-container">
-       <h4>ECO BICI</h4><img src="https://isopixel.net/subidas/2014/02/ECOBICI.png" width="200" height="100">
-       <h4>GOOGLE MAPS</h4><img src="https://upload.wikimedia.org/wikipedia/en/thumb/2/23/GoogleMaps.svg/1200px-GoogleMaps.svg.png" width="100" height="100">
-           <div class="parallax"><img src="http://farm8.staticflickr.com/7424/10586944106_35aec1e8ea_b.jpg"></div>
+          <div class="row">
+          <div class="col s12">                   .</div>
+          <div class="col s12">                   .</div>
+          <div class="col s12">                   .</div>
+            <div class="col s6 offset-s2">
+              <div class="col s12 offset-s3"><img src="https://isopixel.net/subidas/2014/02/ECOBICI.png" width="200" height="100"></div>
+            </div>
+
+            <div class="col s1">
+              <div class="col s6 offset-s3"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/2/23/GoogleMaps.svg/1200px-GoogleMaps.svg.png" width="100" height="100"></div>
+            </div>
+
+            <div class="parallax"><img src="http://farm8.staticflickr.com/7424/10586944106_35aec1e8ea_b.jpg"></div>
+
+          </div>
+
+
          </div>
 
          <div class="section green darken-4">
